--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/d8d0e88669.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Cats</title>
   </head>
   <body>
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <script src="/functions.js"></script>
-    <script src="/script.js" type="module"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/script.js" type="module"></script>
   </body>
 </html>
